--- a/project/OsEngine/Robots/aProd/PingBotUi.xaml
+++ b/project/OsEngine/Robots/aProd/PingBotUi.xaml
@@ -14,9 +14,10 @@
         <Label Name="LabelRandomTrades" Content="Случайных сделок в день" HorizontalAlignment="Left" Margin="23,130,0,0" VerticalAlignment="Top" />
         <TextBox Name="TextBoxRandomTrades" Height="23" Margin="188,130,25,0" TextWrapping="Wrap"  VerticalAlignment="Top" TextAlignment="Right"/>
         <Button Name="ButtonAccept" Content="Применить" Margin="0,0,10,10" Click="Button_Click" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="120"/>
-        
-        
-        
+        <Label x:Name="LabeVersion" Content="Version" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top"/>
+
+
+
     </Grid>
 </Window>
 
