--- a/project/OsEngine/Robots/aProd/PingBotUi.xaml
+++ b/project/OsEngine/Robots/aProd/PingBotUi.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="OsEngine.Robots.aDev.PingBotUi"
+﻿<Window x:Class="OsEngine.Robots.aProd.PingBotUi"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Title="Settings" Height="250.953" Width="430.404" Icon="/Images/OsLogo.ico" Style="{StaticResource WindowStyleNoResize}" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Topmost="True">
@@ -14,9 +14,10 @@
         <Label Name="LabelRandomTrades" Content="Случайных сделок в день" HorizontalAlignment="Left" Margin="23,130,0,0" VerticalAlignment="Top" />
         <TextBox Name="TextBoxRandomTrades" Height="23" Margin="188,130,25,0" TextWrapping="Wrap"  VerticalAlignment="Top" TextAlignment="Right"/>
         <Button Name="ButtonAccept" Content="Применить" Margin="0,0,10,10" Click="Button_Click" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="120"/>
-        
-        
-        
+        <Label x:Name="LabeVersion" Content="Version" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top"/>
+
+
+
     </Grid>
 </Window>
 
